<resources>
    <string name="app_name">Overlook</string>
    <string name="overlook">Overlook</string>
    <string name="content_text">Keeps you connected</string>
    <string name="title_activity_main">Overlook</string>
    <string name="activity_main">Overlook</string>
    <string name="allinterests">All interests</string>
    <string name="settings">Settings</string>
    <string name="faq">FAQs</string>
    <string name="share">Share this app</string>
    <string name="headertitle">Header title</string>
    <string name="welcome">Welcome</string>
    <string name="next">Next</string>
    <string name="set_server">Server</string>
    <string name="set_port">Port</string>
    <string name="connecting">Connecting</string>
    <string name="registering">Registering</string>
    <string name="logging_in">Logging in</string>
    <string name="setupping">Setting up</string>
    <string name="save">Save</string>
    <string name="join">Join</string>
    <string name="leave">Leave</string>
    <string name="input_placeholder">Write a message</string>
    <string name="quotes">Quotes</string>
    <string name="charts">Charts</string>
    <string name="orders">Orders</string>
    <string name="history">History</string>
    <string name="calendar">Calendar</string>
    <string name="events">Events</string>
    <string name="sentimenthistory">Sentiment history</string>
    <string name="sentiment">Sentiment</string>
    <string name="currencies">currencies</string>
    <string name="pairs">pairs</string>
    <string name="errors">Errors</string>
    <string name="check">Check</string>
    <string name="send">Send</string>
    <string name="comment">Comment</string>



    <string name="privacypolicy">Privacy policy</string>
</resources>
